# django_util_js

./: README.md  pyproject.toml  setup.py
django_util_js/: __init__.py  views.py
examples/demo/demo/: settings.py  urls.py
