[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django_util_js"
version = "0.0.16"
authors = [{name = "dantezhu", email = "zny2008@gmail.com"}]
license = {text = "BSD"}
description = "django's util in javascript. such as url_for etc."
dependencies = ["django"]

[project.urls]
Homepage = "https://github.com/dantezhu/django_util_js"

[tool.setuptools]
packages = ["django_util_js"]
zip-safe = false
platforms = ["any"]
include-package-data = false
